feat:UI全面重构，分析流程优化，增加推荐标签页面